--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@ body, html {
     width: 100%;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .bg {
     /* The image used */
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, .3) 0%,rgba(255, 255, 255, 0.7) 100%), url("wallpapers.jpg");    
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, .3) 0%,rgba(255, 255, 255, .9) 100%), url("wallpapers.jpg");    
 
     /* Full height */
     height: auto; 
@@ -20,9 +21,26 @@ body, html {
     background-size: 100%;
 }
 
+p{
+    display: inline;
+    font-size: 70%;
+}
+
+.welcome{  
+    float: left;
+    padding-left: 635px;
+    padding-right: 0;
+}
+
+.weather{
+    float: right;
+    align-content: right;
+    padding-right: 0;
+}
 .clock{
-    padding: 0 0 50px 0;
-    margin: 0 620px;
+    clear: both;
+    padding: 0;
+    margin: 0 600px;
     background: transparent;
 }
 
