--- a/style.css
+++ b/style.css
@@ -6,23 +6,14 @@ body, html {
     padding: 0;
     box-sizing: border-box;
 }
-
-.bg {
-    /* The image used */
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, .3) 0%,rgba(255, 255, 255, .9) 100%), url("wallpapers.jpg");    
-
-    /* Full height */
-    height: auto; 
-    width: auto;
-
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100%;
+body {    
+    background-color: rgb(255, 255, 255);   
 }
 
-p{
-    display: inline;
+label{
+    padding-top: 3px;
+    padding-right: 2px;
+    display: inline-block;
     font-size: 70%;
 }
 
@@ -48,7 +39,7 @@ p{
     clear: both;
     padding: 0;
     margin: 0 600px;
-    background: transparent;
+    background: none;
 }
 
 h1{
