--- a/style.css
+++ b/style.css
@@ -5,16 +5,20 @@ body, html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* background-color:#aaaaaa; */
+    transition-delay: 0.1s;
+    transition: 0.5s ease-in-out;    
 }
+
 body {    
-    background-color: rgb(255, 255, 255);   
+    background-color: whitesmoke; 
 }
 
 label{
-    padding-top: 3px;
-    padding-right: 2px;
+    /* padding-top: 1vh;
+    padding-right: 1vh; */
     display: inline-block;
-    font-size: 70%;
+    font-size: 3vh;
 }
 
 #Wticon{
@@ -25,15 +29,22 @@ label{
 }
 
 .welcome{  
-    float: left;
-    padding-left: 635px;
-    padding-right: 0;
+    
+}
+
+.welcome-label{
+    text-align: center;
+    font-family: Palatino;
+    width:100%;
+    font-size:5vh;
 }
 
 .weather{
     float: right;
     align-content: right;
     padding-right: 0;
+    display:flex;
+    align-items: center;
 }
 .clock{
     clear: both;
@@ -51,13 +62,13 @@ h1{
 
 input[type=text], select {
     text-align: left;
-    font-size: 150%;
-    width: 500px;
-    padding: 0 20px;
-    margin: 0 510px;
+    font-size: 3vh;
+    width: 40vw;
+    padding: 0 1vw;
+    /* margin: 0 510px; */
     display: inline-block;
     border-style: hidden;
-    border-bottom: solid; 
+    border-bottom: solid 0.2vh; 
     background: transparent;
 }
 input:focus,
@@ -71,6 +82,7 @@ button:focus {
     position: absolute;
     display: flex;
     bottom: 15%;     
+    width:100%;
 }
 
 .search_form{
@@ -79,16 +91,22 @@ button:focus {
 
 .loading{
     position: absolute;
-    top: 3px;
-    right: 10px;    
+    top: 1vh;
+    right: 1vh;    
+    font-size: 3vh;
 }
 
 .setting{    
     position: absolute;
-    bottom: 8px;
-    right: 13px;
-    height: 30px;
-    width: 30px;
+    bottom: 1vh;
+    right: 1vh;
+    height: 5vh;
+    width: 5vh;
+    cursor:pointer;
+}
+
+.setting:hover {    
+    filter: opacity(0.5);
 }
 
 .popup_tab{
@@ -111,21 +129,18 @@ button:focus {
 }
 
 .clock_opt{
-    position: absolute;
+    margin: auto;
     top: 35%;
     left: 35%;
     background-color: #fefefe;
     width:auto;
     z-index: 5;
-    margin: auto;
     display:flex;
     align-items: center;    
-
     border: 1px solid #888;
 }
 
 .SE_opt{
-    position: absolute;
     top: 35%;
     left: 39%;
     background-color: #fefefe;
@@ -134,7 +149,45 @@ button:focus {
     margin: auto;
     display:flex;
     align-items: center;    
+    border: 1px solid #888;
+}
 
+.interactive_opt{
+    top: 35%;
+    left: 39%;
+    background-color: #fefefe;
+    width:auto;
+    z-index: 6;
+    margin: auto;
+    display:flex;
+    align-items: center;    
+    border: 1px solid #888;
+}
+
+.background_opt{
+    top: 35%;
+    left: 39%;
+    background-color: #fefefe;
+    width:auto;
+    z-index: 6;
+    margin: auto;
+    display:flex;
+    align-items: center;    
+    border: 1px solid #888;
+}
+
+.backgroundImage_opt{
+    top: 35%;
+    left: 39%;
+    width:80%;
+    height:80%;
+    overflow: auto;
+    background-color: #fefefe;
+    width:auto;
+    z-index: 6;
+    margin: auto;
+    display:block;
+    align-items: center;    
     border: 1px solid #888;
 }
 
@@ -150,4 +203,83 @@ button:focus {
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.main-page-image-row{
+    display:flex;
+    height: 40%;
+    width:100%;
+}
+
+.main-page-image-div{
+    width:20%;
+    height:100%;
+    /* padding:20px; */
+    display:flex;
+}
+
+.main-page-image-display-div{
+    background-color:transparent;
+    width:90%;
+    height:90%;
+    margin:auto;
+    filter:drop-shadow(1px 1px 2px grey);
+    overflow: hidden;
+    cursor:pointer;
+    border:dotted;
+    background:transparent;
+}
+
+.main-page-image-display2-div{
+    background-color:transparent;
+    width:90%;
+    height:90%;
+    margin:auto;
+    filter:drop-shadow(1px 1px 2px grey);
+    overflow: hidden;
+    cursor:pointer;
+    border:none;
+    background:transparent;
+}
+
+.main-page-image-display-overlay{
+    position: absolute;
+    display:flex;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0);
+    opacity: 0;
+    transition: .5s ease;
+    z-index:5;
+}
+
+.main-page-image-display-overlay:hover{
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    opacity:1;
+    background: rgba(0,0,0,0.75);
+}
+
+.main-page-image-display-margin{
+    /* margin:4px; */
+    cursor:pointer;
+}
+
+.main-page-image-label{
+    word-wrap: break-word;
+    /* padding:2px; */
+    text-overflow: ellipsis;
+    cursor:pointer;
+    width:100%;
+    height:100%;
+    overflow:hidden;
+    text-overflow: ellipsis;
+    background: transparent;
+    border:none;
+    resize:none;
 }
