--- a/slideshow_bg.css
+++ b/slideshow_bg.css
@@ -1,8 +1,8 @@
 /* BG */
 
 #bg {
-    -moz-transition: opacity 2s ease-in-out;
-    transition: opacity 2s ease-in-out;
+    /* -moz-transition: opacity 2s ease-in-out; */
+    transition: opacity 0.5s ease-in-out;
     height: 100%;
     left: 0;
     opacity: .4;
